--- a/app/src/main/res/layout/activity_quiz_question.xml
+++ b/app/src/main/res/layout/activity_quiz_question.xml
@@ -1,36 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_topic_overview"
-    android:orientation="vertical"
+    android:id="@+id/activity_quiz_question"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.washington.ksf7.quizdroid.TopicOverviewActivity">
+    android:orientation="vertical"
+    tools:context="edu.washington.ksf7.quizdroid.QuizQuestionActivity">
 
     <TextView
-        android:id="@+id/topic_title"
+        android:id="@+id/question_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:textSize="@dimen/quiz_topic_title_size" />
-
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
+    <RadioGroup
+        android:id="@+id/possible_answers"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginBottom="@dimen/activity_vertical_margin">
+
+    </RadioGroup>
+
     <Button
-        android:id="@+id/begin_button"
+        android:id="@+id/submit_button"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/begin_text" />
+        android:text="@string/submit_text"
+        android:visibility="invisible" />
 
 </LinearLayout>
