--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.washington.ksf7.quizdroid.QuizActivity">
+    tools:context="edu.washington.ksf7.quizdroid.Activities.QuizActivity">
     
     <FrameLayout
         android:id="@+id/quiz_fragment_frame"
