--- a/app/src/main/res/layout/fragment_topic_overview.xml
+++ b/app/src/main/res/layout/fragment_topic_overview.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.washington.ksf7.quizdroid.TopicOverviewFragment">
+    tools:context="edu.washington.ksf7.quizdroid.Fragments.TopicOverviewFragment">
 
     <TextView
         android:id="@+id/topic_title"
