--- a/app/src/main/res/layout/fragment_topic_overview.xml
+++ b/app/src/main/res/layout/fragment_topic_overview.xml
@@ -18,7 +18,7 @@
         android:textSize="@dimen/quiz_topic_title_size" />
 
     <TextView
-        android:id="@+id/description"
+        android:id="@+id/topic_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
