--- a/app/src/main/res/layout/quiz_topic_card.xml
+++ b/app/src/main/res/layout/quiz_topic_card.xml
@@ -11,12 +11,33 @@
     android:layout_marginBottom="@dimen/cardview_default_elevation"
     card_view:cardCornerRadius="@dimen/cardview_default_elevation">
 
-    <TextView
-        android:id="@+id/topic"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/quiz_topic_title_size"
-        android:text="Math"/>
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin">
+
+        <TextView
+            android:id="@+id/topic_title"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="24sp"
+            android:text="Title" />
+
+        <TextView
+            android:id="@+id/topic_description"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:textSize="12sp"
+            android:text="Description"/>
+
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
