--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
 
     <dimen name="quiz_topic_title_size">24sp</dimen>
     <dimen name="quiz_topic_card_min_height">96dp</dimen>
+
+    <dimen name="app_bar_elevation">4dp</dimen>
 </resources>
