--- a/app/src/main/res/menu/menu_options_topic_list.xml
+++ b/app/src/main/res/menu/menu_options_topic_list.xml
@@ -5,7 +5,7 @@
 
     <!-- Preferences, should always be in the overflow -->
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_preferences"
         android:title="@string/preferences"
         app:showAsAction="never"/>
 
